--- a/survey-frontend/src/App.css
+++ b/survey-frontend/src/App.css
@@ -42,6 +42,63 @@
   display: flex;
   height: 70px;
   width: 100%;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
+  color: white;
+  font-size: 30px;
+}
+
+button {
+  background-color: #969696;
+  color: white;
+  border-radius: 10px;
+}
+
+.survey{
+  align-items: center;
+  width: 200px;
+  background-color: #969696;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 300px;
+  margin-top: 20%;
+}
+.form input{
+  margin: 5px;
+}
+.surveys li {
+  text-decoration: none;
+  list-style: none;
+  background-color: #b4b4b4;
+  margin: 20px;
+  width: 150px;
+  height: 90px;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 60px;
+  border: solid;
+}
+.surveys {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  
+}
+li {
+  text-decoration: none;
+  list-style: none;
+}
+.add-question{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 200px;
+  margin-left: 40%;
+  margin-top:50px;
+
 }
