--- a/survey-frontend/src/App.css
+++ b/survey-frontend/src/App.css
@@ -60,14 +60,36 @@ button {
   background-color: #969696;
 }
 .form {
+  background-color: #969696;
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 300px;
-  margin-top: 20%;
+  margin-top: 10%;
+  height: 300px;
+  border-radius: 20px;
+  border: none;
+  padding: 10px;
+  gap: 10px;
 }
 .form input{
-  margin: 5px;
+  padding: 10px;
+  border-radius: 5px;
+}
+.login-btn{
+  height: 50px;
+  background-color: rgb(193, 193, 193);
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
+.goto-link a{
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+.goto-link a:hover {
+  text-decoration: underline;
 }
 .surveys li {
   text-decoration: none;
